* Remove redundant CSS * Add multicolor CSS * Update home page text

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 
 <hr/>
 
-<div class="container mt-5">
+<div class="container text-center mt-5">
   <h2 class="mb-3">Example Usage:</h2>
   <p class="mb-0">
     <a href="/api/whoami">[base url]/api/whoami</a>
@@ -30,7 +30,9 @@
 
   <h2 class="mt-5 mb-3">Example Output:</h2>
   <p class="mb-0">
-    <code>{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5",<br>"software":"Mozilla/5.0 (X11; Ubuntu;
+    <code>{"ipaddress":"::ffff:159.20.14.100",<br>
+      "language":"en-US,en;q=0.5",<br>
+      "software":"Mozilla/5.0 (X11; Ubuntu;
       Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0"}</code>
   </p>
 </div>
