--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,9 @@
 
 <html lang="en-AU">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Request Header Parser Microservice</title>
   <link rel="shortcut icon"
         href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
